turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:21: error: ';' expected but '(' found.
	var T: Array[Int](3)
                         ^